@@ -1,0 +1,49 @@
+/**************************************************************************
+ OmegaT - Computer Assisted Translation (CAT) tool 
+          with fuzzy matching, translation memory, keyword search, 
+          glossaries, and translation leveraging into updated projects.
+
+ Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
+               2011 Didier Briel
+ 
+               Home page: http://www.omegat.org/
+               Support center: http://groups.yahoo.com/group/OmegaT/
+
+ This program is free software; you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation; either version 2 of the License, or
+ (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ **************************************************************************/
+
+package org.omegat.filters3.xml.flash;
+
+import java.util.regex.Pattern;
+
+import org.omegat.filters3.xml.DefaultXMLDialect;
+
+/**
+ * This class specifies the Flash XML Dialect.
+ * 
+ * @author Didier Briel
+ */
+public class FlashDialect extends DefaultXMLDialect {
+    public static final Pattern FLASH_XMLNS = Pattern
+            .compile("xmlns(:\\w+)?=\"http://ns.adobe.com/xfl/2008/\"");
+
+    public FlashDialect() {
+
+        defineParagraphTags(new String[] { "characters"});
+
+        defineIntactTags(new String[] { "script" });
+    }
+
+}
