@@ -1,0 +1,113 @@
+/**************************************************************************
+ OmegaT - Computer Assisted Translation (CAT) tool 
+          with fuzzy matching, translation memory, keyword search, 
+          glossaries, and translation leveraging into updated projects.
+
+ Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
+               2011 Didier Briel
+               Home page: http://www.omegat.org/
+               Support center: http://groups.yahoo.com/group/OmegaT/
+
+ This program is free software; you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation; either version 2 of the License, or
+ (at your option) any later version.
+
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with this program; if not, write to the Free Software
+ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ **************************************************************************/
+
+package org.omegat.filters3.xml.flash;
+
+import java.io.BufferedReader;
+import java.util.regex.Matcher;
+import org.omegat.filters2.Instance;
+import org.omegat.filters3.xml.XMLFilter;
+import org.omegat.util.OConsts;
+import org.omegat.util.OStrings;
+
+/**
+ * Filter for Flash files.
+ * 
+ * @author Didier Briel
+ */
+public class FlashFilter extends XMLFilter {
+
+    /**
+     * Creates a new instance of Flash
+     */
+    public FlashFilter() {
+        super(new FlashDialect());
+    }
+
+    /**
+     * Human-readable name of the File Format this filter supports.
+     * 
+     * @return File format name
+     */
+    public String getFileFormatName() {
+        return OStrings.getString("FLASH_FILTER_NAME");
+    }
+
+    /**
+     * The default list of filter instances that this filter class has. One
+     * filter class may have different filter instances, different by source
+     * file mask, encoding of the source file etc.
+     * <p>
+     * Note that the user may change the instances freely.
+     * 
+     * @return Default filter instances
+     */
+    public Instance[] getDefaultInstances() {
+        return new Instance[] { new Instance("*.xml") };
+    }
+
+    /**
+     * Either the encoding can be read, or it is UTF-8.
+     * 
+     * @return <code>false</code>
+     */
+    @Override
+    public boolean isSourceEncodingVariable() {
+        return false;
+    }
+
+    /**
+     * Yes, Flash may be written out in a variety of encodings.
+     * 
+     * @return <code>true</code>
+     */
+    @Override
+    public boolean isTargetEncodingVariable() {
+        return true;
+    }
+
+    /**
+     * Returns whether the file is supported by the filter, by checking
+     * namespace constraints.
+     *
+     * @return <code>true</code> or <code>false</code>
+     */
+    @Override
+    public boolean isFileSupported(BufferedReader reader) {
+        try {
+            char[] cbuf = new char[OConsts.READ_AHEAD_LIMIT];
+            int cbuf_len = reader.read(cbuf);
+            String buf = new String(cbuf, 0, cbuf_len);
+            Matcher matcher = FlashDialect.FLASH_XMLNS.matcher(buf);
+            if (matcher.find()) {
+                    return true;
+            }
+        } catch (Exception e) {
+            return false;
+        }
+        return false;
+    }
+
+}
